scripts/mesh/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argus-web
spec:
  host: argus-web
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
